policygenerator/policy-sets/community/gatekeeper/input/container-deny-latest-tag/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenylatesttag
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyLatestTag
  targets:
    - libs:
        - |-
          package lib.core

          default is_gatekeeper = false

          is_gatekeeper {
            has_field(input, "review")
            has_field(input.review, "object")
          }

          resource = input.review.object {
            is_gatekeeper
          }

          resource = input {
            not is_gatekeeper
          }

          format(msg) = {"msg": msg}

          format_with_id(msg, id) = msg_fmt {
            msg_fmt := {
              "msg": sprintf("%s: %s", [id, msg]),
              "details": {"policyID": id},
            }
          }

          apiVersion = resource.apiVersion

          name = resource.metadata.name

          kind = resource.kind

          labels = resource.metadata.labels

          annotations = resource.metadata.annotations

          gv := split(apiVersion, "/")

          group = gv[0] {
            contains(apiVersion, "/")
          }

          group = "core" {
            not contains(apiVersion, "/")
          }

          version := gv[count(gv) - 1]

          has_field(obj, field) {
            not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
          }

          missing_field(obj, field) {
            obj[field] == ""
          }

          missing_field(obj, field) {
            not has_field(obj, field)
          }
        - |-
          package lib.pods

          import data.lib.core

          default pod = false

          pod = core.resource.spec.template {
            pod_templates := ["daemonset", "deployment", "job", "replicaset", "replicationcontroller", "statefulset"]
            lower(core.kind) == pod_templates[_]
          }

          pod = core.resource {
            lower(core.kind) == "pod"
          }

          pod = core.resource.spec.jobTemplate.spec.template {
            lower(core.kind) == "cronjob"
          }

          containers[container] {
            keys = {"containers", "initContainers"}
            all_containers = [c | keys[k]; c = pod.spec[k][_]]
            container = all_containers[_]
          }

          volumes[volume] {
            volume = pod.spec.volumes[_]
          }
      rego: |-
        package container_deny_latest_tag

        import data.lib.core
        import data.lib.pods

        policyID := "P2001"

        violation[msg] {
          pods.containers[container]
          has_latest_tag(container)

          msg := core.format_with_id(sprintf("%s/%s/%s: Images must not use the latest tag", [core.kind, core.name, container.name]), policyID)
        }

        has_latest_tag(c) {
          endswith(c.image, ":latest")
        }

        has_latest_tag(c) {
          contains(c.image, ":") == false
        }
      target: admission.k8s.gatekeeper.sh
status: {}
